tests/snapshots/cli__tests__failing-on-anything-found-trigger.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args: args.into(), stdin:\n    stdin.map(|s|\n    s.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec()), stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr:
    - "Error: Error applying: Some input was in scope"
---
args:
  - "--threads"
  - "1"
  - "--fail-any"
  - X
stdin:
  - XYZ
stdout: []
exit_code: 1
