tests/snapshots/cli__tests__language-scoping-and-files-inplace-python-macos.snap
---
source: tests/cli.rs
expression: "CommandSnap\n{\n    args, stdin: None, stdout:\n    stdout.split_inclusive('\\n').map(ToOwned::to_owned).collect_vec(),\n    exit_code,\n}"
info:
  stderr: []
---
args:
  - "-vvvv"
  - "--sorted"
  - "--python"
  - function-names
  - "--glob"
  - subdir/**/*.py
  - foo
  - "--"
  - baz
stdin: ~
stdout:
  - "subdir/2.py\n"
  - "subdir/subdir/3.py\n"
exit_code: 0
